@@ -427,13 +427,13 @@ int insecure;
 	s = rfc821_path(cp, strict || strict_protocol);
 	if (s == cp) {
 	  /* Failure.. ? */
-	  type(SS, -501, m517, "For input: %s", cp);
+	  type(SS, -501, m517, "For input: <%s", cp);
 	  type821err(SS, 501, m517, buf, "Path data: %.200s", rfc821_error);
 	  return;
 	}
 	if (*s == '>') {
 	  smtp_tarpit(SS);
-	  type(SS, 501, m517, "there are too many >'s in this: %s", cp);
+	  type(SS, 501, m517, "there are too many >'s in this: <%s", cp);
 	  return;
 	}
 	/* Ok, now it is a moment to see, if we have source routes: @a,@b:c@d */
@@ -453,7 +453,7 @@ int insecure;
 	s = rfc821_path2(cp, 0);
 	if (s == cp && *s != '>') {
 	  /* Failure.. ? */
-	  type(SS, -501, m517, "For input: %s", cp);
+	  type(SS, -501, m517, "For input: <%s", cp);
 	  type821err(SS, 501, m517, buf, "Path data: %.200s", rfc821_error);
 	  return;
 	}
@@ -471,7 +471,7 @@ int insecure;
 	while (*s == ' ' || *s == '\t') ++s;
 	if (*s != '>') {
 	  rfc821_error_ptr = s;
-	  type(SS, -501, m517, "For input: %s", cp);
+	  type(SS, -501, m517, "For input: <%s", cp);
 	  type821err(SS, 501, m517, buf, "Missing ending '>' bracket");
 	  return;
 	}
@@ -483,7 +483,7 @@ int insecure;
       s = rfc821_path2(cp, strict);
       if (s == cp) {
 	/* Failure.. */
-	type(SS, -501, m517, "For input: %s", cp);
+	type(SS, -501, m517, "For input: <%s", cp);
 	type821err(SS, 501, m517, buf, "Path data: %.200s", rfc821_error);
 	return;
       }
@@ -671,70 +671,65 @@ int insecure;
       char *ss = policymsg(policydb, &SS->policystate);
       if (ss != NULL) {
 	smtp_tarpit(SS);
-	type(SS, 450, m471, "Policy analysis reported: %s", ss);
+	type(SS, 450, m471, "For MAIL FROM address <%*s> policy analysis reported: %s",
+	     addrlen, cp, ss);
       } else if (SS->policyresult < -99) {
 	smtp_tarpit(SS);
 	if (SS->policyresult < -103) { /* -104 */
 	  if (!multilinereplies) {
-	    type(SS, -450, m443, "For input: %s", cp);
-	    type(SS,450,m443, "Policy analysis reports temporary DNS error with your source domain.");
+	    type(SS,450,m443, "For input: <%*s> policy analysis reports temporary DNS error with your source domain.", addrlen, cp);
 	  } else {
-	    type(SS, -450, m443, "For input: %s", cp);
 	    type(SS, -450, m443, "Policy analysis reports temporary DNS error");
 	    type(SS, -450, m443, "with your source domain.  Retrying may help,");
 	    type(SS, -450, m443, "or if the condition persists, you may need");
-	    type(SS,  450, m443, "to get somebody to fix your DNS servers.");
+	    type(SS,  450, m443, "to get somebody to fix your DNS servers: <%*s>",
+		 addrlen, cp);
 	  }
 	} else if (SS->policyresult < -100) {
 	  if (!multilinereplies) {
-	    type(SS, -450, m443, "For input: %s", cp);
-	    type(SS,450,m443, "Policy analysis reports DNS error with your source domain.");
+	    type(SS,450,m443, "For input: <%*s> policy analysis reports DNS error with your source domain.", addrlen, cp);
 	  } else {
-	    type(SS, -450, m443, "For input: %s", cp);
 	    type(SS, -450, m443, "Policy analysis reports DNS error with your");
 	    type(SS, -450, m443, "source domain.   Please correct your source");
-	    type(SS,  450, m443, "address and/or the info at the DNS.");
+	    type(SS,  450, m443, "address and/or the info at the DNS: <%*s>",
+		 addrlen, cp);
 	  }
 	} else {
 	  if (!multilinereplies) {
-	    type(SS, -450, m471, "For input: %s", cp);
-	    type(SS,450,m471, "Access denied by the policy analysis functions.");
+	    type(SS,450,m471, "For address <%*s> access denied by the policy analysis functions.", addrlen, cp);
 	  } else {
-	    type(SS, -450, m471, "For input: %s", cp);
 	    type(SS, -450, m471, "Access denied by the policy analysis functions.");
 	    type(SS, -450, m471, "This may be due to your source IP address,");
 	    type(SS, -450, m471, "the IP reversal domain, the data you gave for");
 	    type(SS, -450, m471, "the HELO/EHLO parameter, or address/domain you");
-	    type(SS,  450, m471, "gave at the MAIL FROM:<...> address.");
+	    type(SS,  450, m471, "gave at the MAIL FROM:<%*s> address.",
+		 addrlen, cp);
 	  }
 	}
       } else {
 	char *ss = policymsg(policydb, &SS->policystate);
 	smtp_tarpit(SS);
 	if (ss != NULL) {
-	  type(SS, -553, m571, "For input: %s", cp);
-	  type(SS, 553, m571, "Policy analysis reported: %s", ss);
+	  type(SS, 553, m571, "For input address <%*s> Policy analysis reported: %s", addrlen, cp, ss);
 	} else if (SS->policyresult < -1) {
 	  if (!multilinereplies) {
-	    type(SS, -553, m543, "For input: %s", cp);
-	    type(SS,553,m543,"Policy analysis reports DNS error with your source domain.");
+	    type(SS,553,m543,"For MAIL FROM address <%*s> the policy analysis reports DNS error with your source domain.", addrlen, cp);
 	  } else {
-	    type(SS, -553, m543, "For input: %s", cp);
 	    type(SS, -553, m543, "Policy analysis reports DNS error with your");
 	    type(SS, -553, m543, "source domain.   Please correct your source");
-	    type(SS,  553, m543, "address and/or the info at the DNS.");
+	    type(SS,  553, m543, "address and/or the info at the DNS: <%*s>",
+		 addrlen, cp);
 	  }
 	} else {
 	  if (!multilinereplies) {
-	    type(SS, -553, m571, "For input: %s", cp);
-	    type(SS,553,m571,"Access denied by the policy analysis functions.");
+	    type(SS,553,m571,"For MAIL FROM address <%*s> access is denied by the policy analysis functions.", addrlen, cp);
 	  } else {
-	    type(SS, -553, m571, "For input: %s", cp);
 	    type(SS, -553, m571, "Access denied by the policy analysis functions.");
 	    type(SS, -553, m571, "This may be due to your source IP address,");
 	    type(SS, -553, m571, "the IP reversal domain, the data you gave for");
 	    type(SS, -553, m571, "the HELO/EHLO parameter, or address/domain you");
-	    type(SS,  553, m571, "gave at the MAIL FROM:<...> address.");
+	    type(SS,  553, m571, "gave at the MAIL FROM:<%*s> address.",
+		 addrlen, cp);
 	  }
 	}
       }
@@ -1005,7 +1000,7 @@ const char *buf, *cp;
 
     if (!CISTREQN(cp, "To:", 3)) {
 	smtp_tarpit(SS);
-	type(SS, 501, m552, "where is To: in this: %s", cp);
+	type(SS, 501, m552, "where is To: in this?  %s", cp);
 	return;
     }
     cp += 3;
@@ -1014,14 +1009,14 @@ const char *buf, *cp;
 	if (!isspace(*cp)) {
 	  if (!sloppy) {
 	    smtp_tarpit(SS);
-	    type(SS, 501, m513, "where is <...> in this: %s", cp);
+	    type(SS, 501, m513, "where is <...> in this?  %s", cp);
 	    return;
 	  }
 	  break; /* Sigh, be sloppy.. */
 	}
     if (*cp == '\0') {
 	smtp_tarpit(SS);
-	type(SS, 501, m513, "where is <...> in this: %s", cp);
+	type(SS, 501, m513, "where is <...> in this?  %s", cp);
 	return;
     } else if (*cp != '<' && !sloppy) {
 	smtp_tarpit(SS);
@@ -1254,67 +1249,74 @@ const char *buf, *cp;
 
 	if (SS->policyresult < -99) { /* "soft error, 4XX code */
 	  if (ss != NULL) {
-	    type(SS, 450, m471, "Policy analysis reported: %s", ss);
+	    type(SS, 450, m471, "For recipient address <%*s> the policy analysis reported: %s", addrlen, cp, ss);
 	  } else if (SS->policyresult < -103) { /* -104 */
 	    if (!multilinereplies)
-	      type(SS, 450, m443, "Policy analysis reports temporary DNS error with the target domain: %s", cp);
+	      type(SS, 450, m443, "Policy analysis reports temporary DNS error with the target domain: <%*s>", addrlen, cp);
 	    else {
 	      type(SS, -450, m443, "Policy analysis reports temporary DNS error");
 	      type(SS, -450, m443, "with this target domain. Retrying may help,");
 	      type(SS, -450, m443, "or if the condition persists, some further");
 	      type(SS, -450, m443, "work may be in need with the target domain");
-	      type(SS,  450, m443, "DNS servers.");
+	      type(SS,  450, m443, "DNS servers; RCPT TO:<%*s>", addrlen, cp);
 	    }
 
 	  } else if (SS->policyresult < -102) {
 	    /* Code: -103 */
 	    if (!multilinereplies) {
-	      type(SS,450, m471, "This target address is not our MX service client: %s", cp);
+	      type(SS,450, m471, "This target address is not our MX service client: <%*s>", addrlen, cp);
 	    } else {
 	      type(SS,-450, m471, "This target address is not our MX service");
 	      type(SS,-450, m471, "client, nor you are connecting from address");
 	      type(SS,-450, m471, "that is allowed to openly use us to relay");
 	      type(SS,-450, m471, "to any arbitary address thru us.");
-	      type(SS, 450, m471, "We don't accept this recipient.");
+	      type(SS, 450, m471, "We don't accept this recipient: <%*s>",
+		   addrlen, cp);
 	    }
 	  } else if (SS->policyresult < -100) {
 	    /* Code: -102 */
 	    if (!multilinereplies)
-	      type(SS, 450, m443, "Policy analysis found DNS error on the target address: %s", cp);
+	      type(SS, 450, m443, "Policy analysis found DNS error on the target address: <%*s>", addrlen, cp);
 	    else {
 	      type(SS,-450, m443, "Policy analysis found DNS error on");
 	      type(SS,-450, m443, "the target address. This address is");
-	      type(SS, 450, m443, "not currently acceptable.");
+	      type(SS, 450, m443, "not currently acceptable: <%*s>",
+		   addrlen, cp);
 	    }
 	  } else {
-	    type(SS, 450, m443, "Policy rejection on the target address: %s", cp);
+	    type(SS,450,m443, "Policy rejection on the target address: <%*s>",
+		 addrlen, cp);
 	  }
 	} else {
 	  if (ss != NULL) {
-	    type(SS, 553, m571, "Policy analysis reported: %s rcpt=%s", ss, cp);
+	    type(SS, 553, m571, "Policy analysis reported: %s rcpt=<%*s>",
+		 ss, addrlen, cp);
 	  } else if (SS->policyresult < -2) {
 	    /* Code: -3 */
 	    if (!multilinereplies)
-	      type(SS,553,m571, "This target address is not our MX service client: %s", cp);
+	      type(SS,553,m571, "This target address is not our MX service client: <%*s>", addrlen, cp);
 	    else {
 	      type(SS,-553, m571, "This target address is not our MX service");
 	      type(SS,-553, m571, "client, nor you are connecting from address");
 	      type(SS,-553, m571, "that is allowed to openly use us to relay");
 	      type(SS,-553, m571, "to any arbitary address thru us.");
-	      type(SS, 553, m571, "We don't accept this recipient.");
+	      type(SS, 553, m571, "We don't accept this recipient: <%*s>",
+		   addrlen, cp);
 	    }
 
 	  } else if (SS->policyresult < -1) {
 	    /* Code: -2 */
 	    if (!multilinereplies) {
-	      type(SS,553,m543, "Policy analysis found DNS error on the target domain: %s", cp);
+	      type(SS,553,m543, "Policy analysis found DNS error on the target domain: <%*s>", addrlen, cp);
 	    } else {
 	      type(SS,-553, m543, "Policy analysis found DNS error on");
 	      type(SS,-553, m543, "the target address. This address is");
-	      type(SS, 553, m543, "not currently acceptable.");
+	      type(SS, 553, m543, "not currently acceptable: <%*s>",
+		   addrlen, cp);
 	    }
 	  } else {
-	    type(SS, 553, m571, "Policy rejection on the target address: %s", cp);
+	    type(SS,553,m571, "Policy rejection on the target address: <%*s>",
+		 addrlen, cp);
 	  }
 	}
 	if (newcp)
@@ -1390,7 +1392,7 @@ const char *buf, *cp;
 	type(SS, 452, m430, (char *) NULL);
     } else if (maxsize > 0 && SS->sizeoptval > maxsize) {
 	smtp_tarpit(SS);
-	type(SS, 552, m534, "Message size exceeds fixed maximum size of %ld chars for acceptable email", maxsize);
+	type(SS, 552, m534, "Message size exceeds fixed maximum size of %ld chars for acceptable email; rcpt=<%*s>", maxsize, addrlen, cp);
     } else if (SS->sizeoptsum > availspace) {
 	smtp_tarpit(SS);
 	type(SS, 452, m431, "insufficient storage space, try again later");
@@ -1406,11 +1408,11 @@ const char *buf, *cp;
 	    smtp_tarpit(SS);
 	    type(SS, 552, m571, "SPAM trap -- too many recipients for an empty source address!");
 	} else if (SS->sizeoptval)
-	    type(SS, 250, "2.1.5", "Ok; can accomodate %d byte message%s",
-		 SS->sizeoptval, srcrtestatus);
+	    type(SS, 250, "2.1.5", "Ok; can accomodate %d byte message%s for <%*s>",
+		 SS->sizeoptval, srcrtestatus, addrlen, cp);
 	else
-	    type(SS, 250, "2.1.5", "Recipient address syntax Ok%s",
-		 srcrtestatus);
+	    type(SS, 250, "2.1.5", "Recipient address syntax Ok%s; rcpt=<%*s>",
+		 srcrtestatus, addrlen, cp);
 	SS->rcpt_count += 1;
     }
     if (s)
